@@ -621,14 +621,8 @@ CFLAGS += -DCONFIG_TLS_INTERNAL_CLIENT
 ifeq ($(CONFIG_CRYPTO), internal)
 ifdef CONFIG_INTERNAL_LIBTOMMATH
 CFLAGS += -DCONFIG_INTERNAL_LIBTOMMATH
-ifdef CONFIG_INTERNAL_LIBTOMMATH_FAST_EXPTMOD
-CFLAGS += -DLTM_FAST_EXPTMOD
-endif
-ifdef CONFIG_INTERNAL_LIBTOMMATH_FAST_SQR
-CFLAGS += -DLTM_FAST_SQR
-endif
-ifdef CONFIG_INTERNAL_LIBTOMMATH_FAST_DIV
-CFLAGS += -DLTM_FAST_DIV
+ifdef CONFIG_INTERNAL_LIBTOMMATH_FAST
+CFLAGS += -DLTM_FAST
 endif
 else
 LIBS += -ltommath
